--- a/src/views/admin/lista.ejs
+++ b/src/views/admin/lista.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head.ejs') %>
-    <link rel="stylesheet" href="/css/paquetes.css">
+    <link rel="stylesheet" href="/css/lista.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
         <br>
 
         <ul>   
-            <h2>Detalle de paquetes</h2>
+            <h2 class="nombre">Detalle de paquetes</h2>
             <div class="container">
             <hr>
             <div class='products'>
