--- a/public/css/lista.css
+++ b/public/css/lista.css
@@ -1,17 +1,37 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+* {
+    box-sizing: border-box;
+    }
 
-body {
-    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    body{
+        background: #f9f9f9;
+        font-size: 20px;
+        
+      }
 
-} 
+.container{
+   padding: 1em 0;
+  float: center;
+  width: 50%;
+  
+}
 
+.nombre{
+        font-size: 30px;
+        background-color: lightslategray;
+        height: 50px;
+        padding: 10px 20px;
+        color: white;
+     
+    }
 
 .products{
    /*   background-color: cornflowerblue;*/
-    padding: 1rem;
+   /*  padding: 1rem;
     font-size: 1.2rem;
     display: flex;
     justify-content: space-between;
     max-width: 1198px;
-    margin: 0 auto;
+    margin: 0 auto; */
 }
 
