--- a/public/css/lista.css
+++ b/public/css/lista.css
@@ -1,20 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-* {
+ * {
     box-sizing: border-box;
     }
-
+ 
     body{
         background: #f9f9f9;
         font-size: 20px;
         
       }
 
-.container{
-   padding: 1em 0;
-  float: center;
-  width: 50%;
-  
+.cont{
+    padding: 1em 0;
+    float: center;
+    width: 80%;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    overflow: hidden;
 }
+
+
+  
+
 
 .nombre{
         font-size: 30px;
@@ -22,16 +30,21 @@
         height: 50px;
         padding: 10px 20px;
         color: white;
-     
+        width: 60%;
+      /*   max-width: 400px; */
+        margin: auto;
     }
+.id-paquete{
+    font-size: 18px;
+    color: gray;
+}
+
+.tamaño{
+   height: 500px;
+}
+
 
 .products{
-   /*   background-color: cornflowerblue;*/
-   /*  padding: 1rem;
-    font-size: 1.2rem;
-    display: flex;
-    justify-content: space-between;
-    max-width: 1198px;
-    margin: 0 auto; */
+   
 }
 
