--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -30,7 +30,7 @@
     </div>
 
     <div class="field">
-        <label for="image">Imagen actual</label>
+        <label for="image">Imagen actual</label><br>
         <img width="15%" src="/images/destinos/<%= product.image %>">
 
         <div>
