--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 
-/* box de fotos */
+
 
 /* .contenedor{
 
@@ -66,6 +66,8 @@ h2{
   /*   display: flex; */
     text-align: center;
     width: 100%;
+    height: 50px;
+    padding: 10px 20px;
     
 
 }
