--- a/src/views/users/userList.ejs
+++ b/src/views/users/userList.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <%- include('../partials/head.ejs') %>
+        <link rel="stylesheet" href="/css/userlist.css">
     </head>
     <body>
         <header>
@@ -9,25 +10,27 @@
         </header>
         <main>
             <div class="container">
-                <h1>Lista Usuarios</h1>
+                <h1 class="nombre">Lista Usuarios</h1>
 
                     <% users.forEach(user => { %>
                         <article class="card" >
                             <div class="card-left">
-                                <figure style="display: flex; flex-direction: column; text-align: center;width: 100px;">
-                                    <img src="images/users/<%= user.image%>" alt="" style="box-shadow: 0 0 15 #999; width: 100px;">
-                                <h3>ID usuario #<%= user.id %></h3>
+                                <!-- esto tenia figure adentro --- style="display: flex; flex-direction: column; text-align: center;width: 100px;" -->
+                                <figure>
+                                    <img src="images/users/<%= user.image%>" alt="" style="box-shadow: 0 0 15 #999; width: 100px;" class="imagenuser">   </figure> <br>
+                                <h3>ID usuario #<%= user.id %></h3><br>
                             </div>
                             <div class="card-content" style="display:inline-block; margin: auto">
-                                <h3><%= user.first_name %> <%= user.last_name %></h3>
-                                <p>Categoría: <%= user.category_id  =="1" ? "Administrador" : "Viajero" %> </p>
+                                <h3><%= user.first_name %> <%= user.last_name %></h3><br>
+                                <p>Categoría: <%= user.category_id  =="1" ? "Administrador" : "Viajero" %> </p><br>
                                 <p>Email: <a href="mailto:<%= user.email %>" target="_blank"><%= user.email %></a></p>
-                                <div>
+                                <div><br>
                                     <button class="button is-danger" ><a href="/userList/<%= user.id %>">Ver detalle</button></a>
                                 </div>
                             </div>  
-                                </figure> 
+                             
                         </article>
+                        <br>
                         <hr>
                     <% }) %>
             </div>
