--- a/src/views/index-admin.ejs
+++ b/src/views/index-admin.ejs
@@ -10,8 +10,10 @@
         <%- include('partials/header.ejs') %>
 
         <hr>
-        <h2> SECCIÓN ADMINISTRADOR </h2>
+       
         <main>
+            <h1 class="admin"> SECCIÓN ADMINISTRADOR </h1>
+            <p class="admintext">From this section you can manage your account</p>
          <div>
             <nav class="content-secction">
                 <ul>
