--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -72,7 +72,7 @@
     <div class="field">
         <label for="category">Categoría</label>
             <div class="control">
-                <select name="destacado" id="destacado" required>
+                <select name="destacado" id="destacado">
                     <option value="">Seleccione una opción</option>
                     <option value="SI">Destacado</option>
                     <option value="NO">No Destacado</option>
