--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -12,7 +12,7 @@
 
     <h2>Editar producto</h2>
 <!--NO FUNCIONA -->
-      <form class="form is-inline" action="/admin/edit/<%= product.id %>?_method=PUT" method="POST"> 
+      <form class="form is-inline" action="/admin/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data"> 
 
     <h2><%= product.title %></h2> 
        <div class="field">
@@ -31,8 +31,8 @@
 
     <div class="field">
         <label for="image">Imagen actual</label><br>
-        <img width="15%" src="/images/destinos/<%= product.image %>">
-
+        
+        <img width="15%" src="/images/destinos/<%=product.image %>">
         <div>
             <input type="file" name="image" id="image" value="default.png" placeholder="">
         
