--- a/src/views/admin/lista.ejs
+++ b/src/views/admin/lista.ejs
@@ -33,6 +33,7 @@
                                     </a>
                                     <h4> Precio: ARS $ <%= product.price%> </h4><br>
                                     <h3 class="id-paquete"> N° de referencia: #<%= product.id %></h3><br>
+                                    <h3 class="id-paquete">Destacado: <%= product.destacado  =="SI" ? "SI" : "NO" %> </h3><br>
                                     
                                 <div class="button">
                                 <button class= btn sm btn-pink-outline>
@@ -45,6 +46,7 @@
                                         <a href="admin/edit/<%= product.id%>">EDITAR</a>
                                     </button>
                                 </div>
+                               
                                 <br>
                             <!-- <div class="button">
                                     <button class= btn sm btn-pink-outline>
