--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <%- include('../partials/head.ejs') %>
-    <link rel="stylesheet" href="css/paquetes.css">
+   <!--  <link rel="stylesheet" href="css/paquetes.css"> -->
+   <link rel="stylesheet" href="css/validateproducts.css"> 
     
 </head>
 <body>
