--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -126,9 +126,9 @@
       <br>
       <hr>
 
-      <section class="partners" > 
+      <section class="partners"> 
         <div class="partners">
-          <h1 class="main-title" >Trabajan con nosotros:</h1>
+    <!--       <h1 class="main-title" >Trabajan con nosotros:</h1> -->
           <div class="box-partner">
               <h3 class="title">LATAM</h3>
                 <div class="content">
