--- a/public/css/log.css
+++ b/public/css/log.css
@@ -65,8 +65,8 @@ input[type="submit"] {
   color: #fff;
   position: relative;
   display: inline-block;
-  background-color: #55acee;
-  box-shadow: 0px 5px 0px 0px #3C93D5;
+  background-color: gray;
+  box-shadow: 0px 5px 0px 0px grey;
   outline: none;
   border: none;
   
@@ -79,7 +79,7 @@ input[type="submit"]:active {
 }
 
 input[type="submit"]:hover {
-  background-color: #6FC6FF;
+  background-color: black;
 }
 
 
