--- a/src/views/users/detail.ejs
+++ b/src/views/users/detail.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <%- include('../partials/head.ejs') %>
-     <!--    <link rel="stylesheet" href="/css/detail.css"> -->
+        <link rel="stylesheet" href="/css/userdetail.css">
 
 
 
@@ -13,29 +13,32 @@
             </header>
     
             <main>
-                <div class="container">
-                    <h1> Bienvenido <%= users.first_name %> !</h1>
-                        <article class="card">
+                <div class="containeruser">
+                   
+                        <article class="cardu">
+                            <h1 class="welcome"> Welcome <%= users.first_name %> </h1>
                             <div class="card-left">
                                 <figure>
-                                    <img src="/images/users/<%= users.image %>" alt="" >
-                                </figure>
-                                <h3> Tus datos: </h3>
-                            <h2>Tu id turisteando: #<%= users.id %></h2>
+                                    <img src="/images/users/<%= users.image %>" alt="" class="imageusuario">
+                                </figure>    
                             </div>
                             <div class="card-content">
+                                <h3> Tus datos: </h3>
+                                <p>Tu id turisteando: #<%= users.id %></h2>
                                 <h3><%= users.first_name %> <%= users.last_name %></h3>
                                 <h3>Pais: <%= users.country %> </h3>
                                 <p>Categoría: <%= users.category_id  =="1" ? "Administrador" : "Viajero" %> </p>
                                 <p>Email: <a href="mailto:<%= users.email %>" target="_blank"><%= users.email %></a></p>
-                                <div>
+                              
                                     <a class="button is-warning" href="/edit/<%= users.id %>"> 
                                         <button class="button is-danger">Editar datos </button>
                                     </a>
                                     <br>
                                     <form class="form is-inline" action="/edit/<%= users.id %>?_method=delete" method="POST">
                                         <button class="button is-danger">Borrar usuario </button>
-                                    </form>
+                                 
+                                    </div>
+                                </form>
                                 </div>
                             </div>    
                         </article>
