--- a/public/css/indexhome.css
+++ b/public/css/indexhome.css
@@ -90,3 +90,16 @@ padding: 10px; */
  border: solid gray 1px;
 }
  */
+/* 
+ .searchhome{
+     background-color: blue;
+
+ }
+ .searchhome input{
+    border-radius: 5rem;
+ }
+
+ .btn{
+     top: 0%;
+     right: 0%;
+ } */
