--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,7 +49,8 @@
       <section>
         <div class="search">
            <form action="search" method="GET">
-               <i class="fas fa-search"></i><input type="text" name="search" placeholder="Buscar producto">
+               <i class="fas fa-search"></i>
+               <input type="text" name="search" placeholder="Buscar producto" class="searchhome">
               <button class= btn sm btn-pink-outline>
                <a href="/">Buscar</a>
               </button>
