--- a/src/views/notAllowed.ejs
+++ b/src/views/notAllowed.ejs
@@ -7,7 +7,7 @@
     <body>
         <%- include('partials/header.ejs') %>
 
-        <h1 style = "color: black;">Seccion restringida - ingresa como administrador </h1>
+        <h1 style = "color: black;">Sección restringida - Ingresá como administrador para poder continuar </h1>
 
         <div class="button">
             <form action ="/login" >
