--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -14,24 +14,19 @@
               <h1><img src="/images/gif.gif" alt="logo" style="width: 40%; "> </h1>
             </div>
             
-            <div class="text">
-              <hr>
-              <br>
-                <p>Copyright - 2021 www.turisteando.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.turisteando.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual. Turistando S.A. con domicilio en Calle Falsa 123 - Mendoza – Argentina.</p>
-                <br>
-                <hr>
-                <p>Una producción de Florencia Belmaña y Alvaro Sopeña </p>  
-            </div>
+            
+             
             
     </div>
   
 
-
+    
 
 
 <ul class="r-footer">
-          <li>
-              <h2> Social</h2>
+  
+      <li>
+              <h2 style="font-size: 20px;"> Nuestras redes</h2>
               <ul class="box h-box"> 
                   <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -39,28 +34,41 @@
                   <li> <a href="#"><i class="fa fa-linkedin"></i></a></li>
                   <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
               </ul>
-          </li>
-
-        <li class="features">
-          <h2>Information</h2>
-          <ul class="box h-box">
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Sales</a></li>
-          </ul>
-        </li>
-
-      <li>
-          <h2>Legal</h2>
-          <ul class="box h-box">
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Contract</a></li>
-          </ul>  
       </li>
 
+      <li class="features">
+        <h2 style="font-size: 20px;">Contactenos</h2>
+          <ul class="box h-box">
+                  <li><a href="/contacto">Envienos un mensaje</a></li>
+                  <li><a href="#">Sobre Nosotros</a></li>
+                  <li><a href="#"></a></li>
+          </ul>
+     <!--  </li>
+      <li> -->
+        <hr>
+        <br>
+        <h2 style="font-size: 20px;">Legales</h2>
+          <ul class="box h-box">
+            <li><a href="#">Privacidad</a></li>
+            <li><a href="#">Terminos y condiciones</a></li>
+            <li><a href="#"></a></li>
+          </ul>  
+      </li> 
 
 </ul>
+
+<hr>
+<br>
+
+<div style="text-align: center; color: grey;">
+  <br>
+  <p>Copyright - 2021 www.turisteando.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.turisteando.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual. Turistando S.A. con domicilio en Calle Falsa 123 - Mendoza – Argentina.</p>
+  <br>
+  <hr>
+  <br>
+  <p>Una producción de Florencia Belmaña y Alvaro Sopeña </p>  
+  <div>
+
 <!--  <div class="b-footer"> 
   <p class="text">
   Una producción de Florencia Belmaña y Alvaro Sopeña </p>
