--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -45,6 +45,7 @@
                 <% if (locals.errors && errors.image) { %>
                 <p class="feedback is-danger"><%= errors.image.msg %></p>
                 <% } %>
+                <div class= "errorImage errorMessage"></div>
             </div>   
 
             <div class="field">
