--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -41,8 +41,9 @@
                                     </div>
 
                                     <div class="field">
-                                        <label for="image">Imagen de perfil</label>
-                                        <h3> Tu foto actual: </h3><img src="/images/users/<%= users.image %>" alt="">
+                                        <label for="image">Tu foto actual: </label>
+                                        <h3> </h3>
+                                        <img width="15%" src="/images/users/<%= users.image %>" alt="">
                                         <div class="control">
                                             <input type="file" name="image" id="image" value="default.png" placeholder="" required>
                                         </div>
